# repo

./: README.md  preview_news.json  pyproject.toml
stud_api/: __main__.py
stud_api/api/: application.py  exceptions.py
stud_api/api/models/: auth.py  bookings.py  dormitories.py  events.py  news.py  status.py  tickets.py
stud_api/api/routes/: auth.py  bookings.py  dormitories.py  events.py  news.py  tickets.py  tikects.py
stud_api/db/: connection.py  crud.py  engine.py  models.py
stud_api/host_api_wrapper/: delete.py  get.py  post.py  put.py
stud_api/services/: avia.py  rzd.py
stud_api/uploader/: upload.py
stud_api/utils/: delete_all_news.py  generator.py  placeholders.py  tags_deleter.py  unix_time_converter.py  upload_file.py
